--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
               type="text"
               name="name"
               id="name"
-              placeholder="username"
+              placeholder="Username"
               required
               autocomplete="off" />
             <input
