--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               type="password"
               name="password"
               id="password"
-              placeholder="Repeat password"
+              placeholder="Confirm password"
               required/>
           </div>
           <div>
