--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             <input type="checkbox" name="" id="checking" checked required/> Accept the
             conditions</div>
             <div class="buton"><button>sign up</button></div>
+          <div class="already">Already a member? <a href="index2.html">Login</a></div>
           </div>
           
         </form>
