--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Sign UP</title>
+    <title>Sign Up</title>
   </head>
   <body>
     <div class="container">
@@ -43,8 +43,9 @@
             <input type="checkbox" name="" id="checking" checked required/> Accept the
             conditions</div>
             <div class="buton"><button>sign up</button></div>
-          <div class="already">Already a member? <a href="index2.html">Login</a></div>
+            <div class="already">Already a member? <a href="index2.html">Login</a></div>
           </div>
+          
           
         </form>
       </main>
